--- a/work_sv.html
+++ b/work_sv.html
@@ -143,23 +143,23 @@
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_31.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">«DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
+                <div class="img-hover-text">«DER HOLLÄNDER»<br/>project study på en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_32.jpeg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">«DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
+                <div class="img-hover-text">«DER HOLLÄNDER»<br/>project study på en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_33.jpeg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">"DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
+                <div class="img-hover-text">"DER HOLLÄNDER»<br/>project study på en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_34.jpeg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">«DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
+                <div class="img-hover-text">«DER HOLLÄNDER»<br/>project study på en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_34.jpeg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">«DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
+                <img src="img/INDEX_35.jpeg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">«DER HOLLÄNDER»<br/>project study på en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_40.gif" alt="LINYER Bild" class="hover-img" />
@@ -191,23 +191,23 @@
             </div>
                 <div class="img-hover-container">
                 <img src="img/INDEX_80.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Landskapsarkitektur Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_81.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Landskapsarkitektur Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
             </div>
                 <div class="img-hover-container">
                 <img src="img/INDEX_82.jpeg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Landskapsarkitektur Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
             </div>
                 <div class="img-hover-container">
                 <img src="img/INDEX_83.jpeg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Landskapsarkitektur  Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
             </div>
                 <div class="img-hover-container">
                 <img src="img/INDEX_84.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
+                <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Landskapsarkitektur Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
             </div>
         </div>
     </div>
