--- a/contact_de.html
+++ b/contact_de.html
@@ -32,12 +32,9 @@
         Weiterbauen, Wiederverwenden, und wenn Neu, dann mit biogenen Baumaterialien wie zum Beispiel Holz. 
         Ihr Interessen umfassen eine breite Palette von Themen wie Entwürfe für öffentliche Gebäude und Bildungseinrichtungen, 
         konstruktive Detaillösungen im Massstab 1:1, Visualisierung von Ideen durch Illustrationen und Modelle, Lehre und öffentliche Workshops, 
-        Stadtplanung und Schreiben. Neben ihrem Engagement für LINYER sind beide auch in anderen Projekten aktiv. 
-        Emma arbeitet als Projektleiterin für SAKKE Studio in den frühen Projektphasen.
-        Lowis ist als wissenschaftlicher Assistent am Lehrstuhl für Architectural Behaviorology bei Prof. Momoyo Kaijima am 
-        Institut für Design und Architektur D-ARCH ETHZ tätig.<br/>
+        Stadtplanung und Schreiben.<br/>
         <br/>
-        Emma Lindén (geb. 1994, Stockholm SE) ist Architektin SAR/MSA. Während ihres Studiums an der Königlichen Technischen Hochschule Stockholm absolvierte sie ein Austauschjahr an der ETHZ. Sie arbeitete für General Architecture, Lütjens Padmanabhan, Maich Swift und Boltshauser Architekten, bevor sie zu SAKKE Studio wechselte.<br/>
+        Emma Lindén (geb. 1994, Stockholm SE) ist Architektin SAR/MSA. Während ihres Studiums an der Königlichen Technischen Hochschule Stockholm absolvierte sie ein Austauschjahr an der ETHZ. Sie arbeitete für General Architecture, Lütjens Padmanabhan, Maich Swift und Boltshauser Architekten.<br/>
         <br/>
         Lowis Gujer (geb. 1995, Zürich CH) ist Architekt MSc Arch. ETHZ. Er schloss sein Studium an der ETHZ mit einer Diplomarbeit zum Thema „Eine Stadt ohne Schlachthof?“ unter der Leitung von Prof. Momoyo Kaijima ab. Nach Erfahrungen in Architekturbüros in Zürich, Stockholm und London arbeitet er seit Anfang 2024 am Lehrstuhl für Architectural Behaviorology. Dort ist er als wissenschaftlicher Assistent für den Entwurfskurs im zweiten Jahr, den Masterkurs "Japan Studio" und weitere Lehrprojekte tätig.<br/>
         <br/>
@@ -88,6 +85,7 @@
         <br/>
         2402 - RINGELREIHE<br/>
         Doppelkindergarten in Wil, St. Gallen, Schweiz, 2024, Wettbewerb<br/>
+        mit Atikollektiv<br/>
         Landschaftsarchitektur: Simone Pietscher<br/>
         Bauingenieur: Saman Hekmati<br/>
         Bauherrschaft: Stadt Wil<br/>
