--- a/contact_sv.html
+++ b/contact_sv.html
@@ -29,10 +29,9 @@
         LINYER är ett arkitektkontor med säte i Stockholm och Zürich, grundat och drivet av Lowis Gujer och Emma Lindén sedan 2024. 
         I deras arbete ligger fokus på lokala och småskaliga projekt samt användning av naturliga byggmaterial. 
         Ofta söker de en arkitektonisk form som förhåller sig till de resurser som finns: vidarebyggnad, återanvändning, och om nytt – då i biogena material såsom trä. 
-        Deras intressen inkluderar förslag för offentliga byggnader och utbildningslokaler, konstruktiva detaljlösningar i skala 1:1, visualisering av idéer genom illustrationer och modeller, undervisning och offentliga workshops, stadsplanering och skrivande. 
-        Förutom sitt arbete i LINYER är båda aktiva i andra projekt. Lowis är verksam som vetenskaplig assistent vid Chair of Architectural Behaviorology hos Prof. Momoyo Kaijima vid Institutet för design och arkitektur D-ARCH, ETHZ. Emma arbetar som projektledande arkitekt på SAKKE Studio i de tidiga projektskeden.<br/>
+        Deras intressen inkluderar förslag för offentliga byggnader och utbildningslokaler, konstruktiva detaljlösningar i skala 1:1, visualisering av idéer genom illustrationer och modeller, undervisning och offentliga workshops, stadsplanering och skrivande.<br/>
         <br/>
-        Emma Lindén (f. 1994, Stockholm SE) är arkitekt SAR/MSA. Under sina studier vid Kungliga Tekniska Högskolan i Stockholm genomförde hon ett utbytesår vid ETHZ. Hon har arbetat på General Architecture, Lütjens Padmanabhan, Maich Swift och Boltshauser Architekten innan hon började på SAKKE Studio.<br/>
+        Emma Lindén (f. 1994, Stockholm SE) är arkitekt SAR/MSA. Under sina studier vid Kungliga Tekniska Högskolan i Stockholm genomförde hon ett utbytesår vid ETHZ. Hon har arbetat på General Architecture, Lütjens Padmanabhan, Maich Swift och Boltshauser Architekten.<br/>
         <br/>
         Lowis Gujer (f. 1995, Zürich CH) är arkitekt MSc Arch. ETHZ. Han avslutade sina studier vid ETHZ med ett examensarbete med titeln "Eine Stadt ohne Schlachthof?" under ledning av Prof. Momoyo Kaijima. Efter erfarenheter från arkitektkontor i Zürich, Stockholm och London arbetar han sedan början av 2024 vid Chair of Architectural Behaviorology. Där är han vetenskaplig assistent för designkursen i år 2, masterkursen "Japan Studio" och andra undervisningsprojekt.<br/>
         <br/>
@@ -81,6 +80,7 @@
         <br/>
         2402 - RINGELREIHE<br/>
         Dubbel förskola i Wil, St. Gallen, Schweiz, 2024, tävling<br/>
+        med Atikollektiv<br/>
         Landskapsarkitektur: Simone Pietscher<br/>
         Byggingenjör: Saman Hekmati<br/>
         Beställare: Stadt Wil<br/>
