--- a/work_sv.html
+++ b/work_sv.html
@@ -143,23 +143,23 @@
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_31.gif" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">«DER HOLLÄNDER»<br/>project study på en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
+                <div class="img-hover-text">«DER HOLLÄNDER»<br/>tävling för en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_32.jpeg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">«DER HOLLÄNDER»<br/>project study på en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
+                <div class="img-hover-text">«DER HOLLÄNDER»<br/>tävling för en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_33.jpeg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">"DER HOLLÄNDER»<br/>project study på en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
+                <div class="img-hover-text">"DER HOLLÄNDER»<br/>tävling för en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_34.jpeg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">«DER HOLLÄNDER»<br/>project study på en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
+                <div class="img-hover-text">«DER HOLLÄNDER»<br/>tävling för en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_35.jpeg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">«DER HOLLÄNDER»<br/>project study på en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
+                <div class="img-hover-text">«DER HOLLÄNDER»<br/>tävling för en musikskola med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_40.gif" alt="LINYER Bild" class="hover-img" />
